--- a/.github/workflows/commit.yaml
+++ b/.github/workflows/commit.yaml
@@ -15,15 +15,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  lint-go:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-go@v4
-        with:
-          go-version: "^1.21"
-      - uses: golangci/golangci-lint-action@v3
-
   lint-dockerfile:
     runs-on: ubuntu-latest
     steps:
@@ -62,7 +53,7 @@ jobs:
         run: go test -v ./...
 
   release:
-    needs: [gitleaks, lint-go, lint-dockerfile, test]
+    needs: [gitleaks, lint-dockerfile, test]
     runs-on: ubuntu-latest
     steps:
       - uses: joaofnds/semantic-release-action@v1.1.0
